tests/invalid/Constant_Invalid_1.whiley
define X as 1 + Y
define Y as 1 + X // cyclic constant definition
